--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <base target="_blank">
         <link rel="icon" href="113406-200.png" type="image/gif" sizes="16x16"> 
+ 
     </head>
     <body> <div id="container">
 <div id="body">
         <div style="text-align: center;"><h1>Title35.com</h1></div>
 
-<p>Title 35 of the United States Code is a title of United States Code regarding patent law. The sections of Title 35 govern all aspects of patent law in the United States. There are currently 37 chapters, which include 376 sections (149 of which are used), in Title 35. (As of June 2020, <a href="https://en.wikipedia.org/wiki/Title_35_of_the_United_States_Code" target="target">WIKIPEDIA</a>)</p>
+<p>Title 35 of the United States Code is the section of United States Code regarding patent law. The sections of Title 35 govern all aspects of patent law in the United States. There are currently 37 chapters, which include 376 sections (149 of which are used), in Title 35. (As of June 2020, <a href="https://en.wikipedia.org/wiki/Title_35_of_the_United_States_Code" target="target">WIKIPEDIA</a>)</p>
 <Hr style="width: 95%; margin-left:0;">
     <p>REFERENCES:</p>
     <ul> 
@@ -20,9 +21,10 @@
         <li><a href="https://www.govinfo.gov/content/pkg/USCODE-2011-title35/html/USCODE-2011-title35-partII-chap18-sec201.htm">GOVINFO.GOV</a></li>
     </ul>
     <Hr style="width: 95%; margin-left:0;">
-    
+    <p style="word-wrap: break-word; "><strong>Everybody copies. </strong>Title 35 is about a right to exclude others from copying.</p>
 </div>
 
-<footer>Copyright © 2020 by Richard Brown.</footer>
+
+<footer>Copyright © 2020 by Richard Brown <strong>|</strong> Want to own Title35.com? Make an offer, <a href="mailto:offers@title35.com?subject=Offer to buy Title35.com" target="_blank">Email</a>.</footer>
 </div> </body>
 </html>
